fix(storage) use size selector with unit and fix alignment

--- a/src/sass/_storage_volume_form.scss
+++ b/src/sass/_storage_volume_form.scss
@@ -9,4 +9,8 @@
     margin-left: 0;
     max-width: 42rem !important;
   }
+
+  .memory-limit-with-unit :first-child {
+    flex-grow: 1;
+  }
 }
